--- a/Video Summarize/Video Summarize/Storyboards/Base.lproj/Main.storyboard
+++ b/Video Summarize/Video Summarize/Storyboards/Base.lproj/Main.storyboard
@@ -748,9 +748,9 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JDY-hT-KGf">
                                 <rect key="frame" x="0.0" y="194" width="393" height="624"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WO6-6n-hIs">
-                                        <rect key="frame" x="16" y="294" width="361" height="330"/>
-                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WO6-6n-hIs">
+                                        <rect key="frame" x="16" y="342.00000000000006" width="361" height="994.33333333333348"/>
+                                        <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" name="TextColor"/>
                                         <nil key="highlightedColor"/>
@@ -856,11 +856,46 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="omu-cW-hPX">
+                                        <rect key="frame" x="16" y="294" width="361" height="32"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vRs-Ln-SbR">
+                                                <rect key="frame" x="0.0" y="0.0" width="361" height="32"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="32" id="M4h-RF-Csp"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                <color key="tintColor" name="TextColor"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" title=" Özeti Paylaş" image="paperplane" catalog="system">
+                                                    <color key="titleColor" name="TextColor"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="shareButtonAction:" destination="qOn-iu-c6D" eventType="touchUpInside" id="dRv-MA-CX4"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" name="AppGray"/>
+                                        <constraints>
+                                            <constraint firstItem="vRs-Ln-SbR" firstAttribute="leading" secondItem="omu-cW-hPX" secondAttribute="leading" id="EWU-mU-d26"/>
+                                            <constraint firstAttribute="bottom" secondItem="vRs-Ln-SbR" secondAttribute="bottom" id="PK3-Pe-Qoe"/>
+                                            <constraint firstAttribute="trailing" secondItem="vRs-Ln-SbR" secondAttribute="trailing" id="gsr-B0-gro"/>
+                                            <constraint firstItem="vRs-Ln-SbR" firstAttribute="top" secondItem="omu-cW-hPX" secondAttribute="top" id="ldX-iD-DQ2"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="4"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="WO6-6n-hIs" secondAttribute="trailing" constant="16" id="069-jh-DDV"/>
-                                    <constraint firstItem="WO6-6n-hIs" firstAttribute="top" secondItem="aWO-zf-OBF" secondAttribute="bottom" constant="16" id="0yc-IG-Pgf"/>
+                                    <constraint firstItem="WO6-6n-hIs" firstAttribute="top" secondItem="omu-cW-hPX" secondAttribute="bottom" constant="16.000000000000057" id="0yg-le-rZq"/>
                                     <constraint firstItem="aWO-zf-OBF" firstAttribute="top" secondItem="MBe-Mf-i9J" secondAttribute="bottom" constant="16" id="3uG-x8-QIt"/>
+                                    <constraint firstItem="omu-cW-hPX" firstAttribute="leading" secondItem="JDY-hT-KGf" secondAttribute="leading" constant="16" id="4JT-mO-WSJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="omu-cW-hPX" secondAttribute="trailing" constant="16" id="893-Jj-jE0"/>
+                                    <constraint firstItem="omu-cW-hPX" firstAttribute="top" secondItem="aWO-zf-OBF" secondAttribute="bottom" constant="16" id="9a8-1c-HhJ"/>
                                     <constraint firstAttribute="trailing" secondItem="aWO-zf-OBF" secondAttribute="trailing" constant="16" id="Cth-XD-sVW"/>
                                     <constraint firstItem="MBe-Mf-i9J" firstAttribute="top" secondItem="JDY-hT-KGf" secondAttribute="top" id="H3f-Bw-aAB"/>
                                     <constraint firstItem="aWO-zf-OBF" firstAttribute="leading" secondItem="JDY-hT-KGf" secondAttribute="leading" constant="16" id="Nr0-KF-M74"/>
@@ -882,8 +917,10 @@
                             <constraint firstItem="JDY-hT-KGf" firstAttribute="leading" secondItem="d5x-v4-fsO" secondAttribute="leading" id="APA-S9-Mj4"/>
                             <constraint firstItem="d5x-v4-fsO" firstAttribute="trailing" secondItem="JDY-hT-KGf" secondAttribute="trailing" id="BrR-ae-Gp4"/>
                             <constraint firstItem="JDY-hT-KGf" firstAttribute="bottom" secondItem="d5x-v4-fsO" secondAttribute="bottom" id="G1S-S2-2qd"/>
+                            <constraint firstItem="d5x-v4-fsO" firstAttribute="trailing" secondItem="omu-cW-hPX" secondAttribute="trailing" constant="16" id="OHN-v9-8ER"/>
                             <constraint firstItem="d5x-v4-fsO" firstAttribute="trailing" secondItem="WO6-6n-hIs" secondAttribute="trailing" constant="16" id="XpQ-YF-ni5"/>
                             <constraint firstItem="d5x-v4-fsO" firstAttribute="trailing" secondItem="MBe-Mf-i9J" secondAttribute="trailing" constant="16" id="dI5-wL-qlK"/>
+                            <constraint firstItem="omu-cW-hPX" firstAttribute="leading" secondItem="d5x-v4-fsO" secondAttribute="leading" constant="16" id="f9g-6Q-EM4"/>
                             <constraint firstItem="aWO-zf-OBF" firstAttribute="leading" secondItem="d5x-v4-fsO" secondAttribute="leading" constant="16" id="lwg-PV-pV9"/>
                             <constraint firstItem="WO6-6n-hIs" firstAttribute="leading" secondItem="d5x-v4-fsO" secondAttribute="leading" constant="16" id="vqj-HT-hxx"/>
                         </constraints>
@@ -907,6 +944,7 @@
                     <connections>
                         <outlet property="detailLabel" destination="WO6-6n-hIs" id="M8s-hQ-Csl"/>
                         <outlet property="frameView" destination="MBe-Mf-i9J" id="fGq-5s-S52"/>
+                        <outlet property="shareButton" destination="vRs-Ln-SbR" id="qwb-ea-2VE"/>
                         <outlet property="timeLabel" destination="08x-VS-vwc" id="M1O-Vw-flv"/>
                         <outlet property="timeTitle" destination="hDU-RS-0IM" id="H8s-v2-afW"/>
                         <outlet property="videoTitle" destination="n54-L1-VA8" id="61K-ac-WVA"/>
@@ -939,6 +977,7 @@
     <resources>
         <image name="chevron.right" catalog="system" width="97" height="128"/>
         <image name="clock.badge.checkmark" catalog="system" width="128" height="114"/>
+        <image name="paperplane" catalog="system" width="128" height="119"/>
         <image name="person.wave.2" catalog="system" width="128" height="116"/>
         <image name="play.fill" catalog="system" width="120" height="128"/>
         <image name="plus" catalog="system" width="128" height="113"/>
